feature/infra/vite_migration: Migrated from create react app to vite.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="D&D Campaign Tracker" />
+    <meta name="description" content="WorldBuilder" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>D&D Campaign Tracker</title>
+    <title>WorldBuilder</title>
   </head>
   <body>
     <div id="root"></div>
 
     <!-- Ponto de entrada do Vite -->
-    <script type="module" src="/src/index.js"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
